Created Kernel_Wrapper and Slicing_Annealer

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,7 +2,7 @@ all:
 	g++ Kernel.h -std=c++11
 	g++ Conv.h -std=c++11
 	g++ Dblock.h -std=c++11
-	g++ Cblock.h -std=c++11
+	g++ Kernel_Wrapper.h -std=c++11
 
 clean:
-	rm a.out Kernel.h.gch Conv.h.gch Dblock.h.gch Cblock.h.gch
+	rm a.out Kernel.h.gch Kernels.h.gch Conv.h.gch Dblock.h.gch Kernel_Wrapper.h.gch
