--- a/Slicing_Annealer/Makefile
+++ b/Slicing_Annealer/Makefile
@@ -1,6 +1,8 @@
 all:
-	g++ Slicing_Annealer.h -std=c++11
 	g++ Slicing_Annealer.cpp -std=c++11 -o Slicing_Annealer.out
 
 clean:
 	rm Slicing_Annealer.out Slicing_Annealer.h.gch
+
+run: all 
+	./Slicing_Annealer.out
